# aicodegencrew

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AI_SDLC_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  NEXT_STEPS.md  PHASE5_FINAL_STATUS.md  PHASE5_FIXES_APPLIED.md  PHASE5_V3_IMPLEMENTATION_SUMMARY.md  PLAYWRIGHT_MCP_INTEGRATION_SUMMARY.md  README.md  SEAGuide.txt  debug_adapter.py  deploy.sh  docker-compose.local.yml  docker-compose.vps.yml  docker-compose.yml  find_box.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  start.bat  start.sh  test_collectors.py  test_mcp_tokens.py  web_fetch_mcp.py
.github/workflows/: build-and-push.yml
certs/: CapgeminiPKIRootCA.crt
config/: collectors_config.json  phases_config.yaml  prometheus.yml
config/grafana/dashboards/: sdlc-overview.json
docs/: AI_EXPERTISE_REFERENCE.md  AI_MASTERCLASS.md  AI_SDLC_ARCHITECTURE.md  DELIVERY_GUIDE.md  LLM_OPTIMIZATION_ROADMAP.md  MCP_KNOWLEDGE_SERVER.md  PHASE1_TODO.md  PHASE4_HYBRID_ARCHITECTURE.md  SCALING_STRATEGIES.md  SDLC_95_ARCHITECTURE.md  SDLC_ARCHITECTURE.md  SDLC_BLUEPRINT.md  SDLC_BLUEPRINT_DE.md  SDLC_Pilot_Presentation_Content.md  USER_GUIDE.md  architecture-document-phase-v2.md  architecture-document-phase.md  cross-architecture.drawio  feature-plan-rag-expert.md  phase5-team-crew-concept.md  platform-services.md
docs/architecture/: collector-delegation.drawio  collector-semantic-contract.md  crew-pattern.md  dashboard.md  ecosystem-management-plan.md  ecosystem-strategy.md  indexing-pipeline.md  knowledge-lifecycle.md  logging-observability.md  multi-project-isolation.md  orchestration.md  phase-registry.md  pipeline-contract.md  pipeline-pattern.md  quality-architecture.md
docs/design/: task-type-strategy.md
docs/diagrams/: analysis-crew.drawio  code-generation-pipeline.drawio  collectors.drawio  dashboard-architecture.drawio  development-planning-pipeline.drawio  evidence-flow.drawio  implement-phase-crew.drawio  knowledge-structure.drawio  layer-architecture.drawio  orchestration-state.drawio  phase-flow.drawio  phase2-crew-architecture.drawio  phase4-pipeline.drawio  pipeline-flow.drawio  quality-architecture.drawio  reset-cascade.drawio  sdlc-overview.drawio  synthesis-crew.drawio  task-type-strategy.drawio
docs/guides/: CORPORATE_SSL_GUIDE.md  DELIVERY_GUIDE.md  DOCKER_RELEASE_GUIDE.md  IMPLEMENT_PHASE_ARCHITECTURE.md  LLM_SELECTION_GUIDE.md  MCP_KNOWLEDGE_SERVER.md  USER_GUIDE.md
docs/phases/phase-0-discover/: README.md  phase-0-discover-architecture.drawio
docs/phases/phase-1-extract/: README.md  (+1 more)
knowledge/: README.md  developer_knowledge_template.md  run_report.json
knowledge-20260203_235934/architecture/: evidence_map.json
knowledge-20260204_003550/architecture/: analyzed_architecture.json  architecture_facts.json
knowledge/architecture/: analysis_functional.json  analysis_technical.json  analyzed_architecture.json  architecture_facts.json  c4-context.drawio  components.json  containers.json  data_model.json  dependencies.json  error_handling.json  evidence_map.json  infrastructure.json  interfaces.json  relations.json  runtime.json  security_details.json  system.json  tech_versions.json  temp_functional_analysis.json  temp_quality_analysis.json  temp_technical_analysis.json  tests.json  validation.json  workflows.json
knowledge/development/: BNUVZ-12529_plan.json  BNUVZ-12568_plan.json
knowledge/phase0_indexing/: .indexing_state.json
knowledge/phase1_facts/: architecture_facts.json  components.json  data_model.json  evidence_map.json  relations.json  runtime.json  system.json  tech_versions.json  tests.json  workflows.json
knowledge/phase2_analysis/: analyzed_architecture.json
knowledge/test_run/: components.json
knowledge/triage/: BNUVZ-12529_customer.md  BNUVZ-12529_developer.md  BNUVZ-12529_findings.json  BNUVZ-12529_triage.json  BNUVZ-12568_customer.md  BNUVZ-12568_developer.md  BNUVZ-12568_findings.json  BNUVZ-12568_triage.json  VVZ-2998_customer.md  VVZ-2998_developer.md  VVZ-2998_findings.json  VVZ-2998_triage.json  summary.json
plugins/ecosystems/: README.md
scripts/: build_release.py  dev.bat  dev.sh  push-docker-images.sh  setup-local.sh  setup-windows.bat  setup-windows.ps1  stop-dev.js
src/aicodegencrew/: __init__.py  __main__.py  cli.py  main.py  orchestrator.py  phase_registry.py  pipeline_contract.py
tests/: __init__.py  conftest.py  test_api_integration.py  test_architecture_style_collector.py  test_backend_setup_status.py  test_chroma_index.py  test_chunker.py  test_cli_orchestrator.py  test_code_generation.py  test_confluence_converter.py  test_database_collector.py  test_delivery.py  test_development_planning.py  test_file_filters.py  test_history_stats.py  test_history_stats_phase_frequency.py  test_integration.py  test_integration_collector.py  test_logger_guardrails.py  test_mapreduce_cache.py  test_orchestrator_protocol.py  test_parallel_execution.py  test_parsers_upgrade.py  test_phase3_synthesis.py  test_phase5_implement_crew.py  test_phase_state_smoke.py  test_pipeline_contract.py  test_progress_and_ux.py  test_quality_gate.py  test_quality_validator.py  test_repo_discovery.py  test_reset_and_history.py  test_review_and_repair.py  test_scenarios.py  test_spring_collector.py  test_spring_collector_interfaces.py  test_spring_collector_relations.py  test_summarize_facts.py  test_validation_model.py
tests/e2e/: README.md  TEST_SUMMARY.md  conftest.py  test_full_workflow.py  test_phase1_facts_extraction.py  test_phase2_synthesis.py
ui/: build-secure.sh  deploy.env.example  docker-compose.secure.yml  docker-compose.ui.yml
ui/backend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.secure  compile_bytecode.py  config.py  docker-entrypoint.sh  ensure_init.py  install_deps.py  main.py  requirements.txt  schemas.py
ui/frontend/: .prettierignore  .prettierrc.json  Dockerfile  angular.json  eslint.config.mjs  jest.config.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.spec.json
(+662 files in other folders)
