[project]
name = "aicodegencrew"
version = "0.1.0"
description = "AI-powered SDLC automation using CrewAI with local Ollama models"
authors = [{ name = "Aymen Mastouri", email = "aymen.mastouri@icloud.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "Proprietary" }
keywords = ["ai", "crewai", "ollama", "sdlc", "code-generation", "rag"]

dependencies = [
    # Core AI/ML
    "crewai[tools]>=1.9.0",
    "ollama>=0.4.5",
    # Vector DB & Embeddings
    "chromadb>=1.1.0",
    # MCP Server
    "mcp[cli]>=1.2.0",
    # Configuration & Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.2",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
aicodegencrew = "aicodegencrew.main:run"
aicodegencrew-mcp = "aicodegencrew.mcp.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aicodegencrew"]

[tool.crewai]
type = "crew"
