[project]
name = "aicodegencrew"
version = "0.3.0"
description = "AI-powered SDLC automation using CrewAI with local Ollama models"
authors = [{ name = "Aymen Mastouri", email = "aymen.mastouri@icloud.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "Proprietary" }
keywords = ["ai", "crewai", "ollama", "sdlc", "code-generation", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    # Core AI/ML
    "crewai[tools]>=1.9.0",
    "ollama>=0.4.5",
    # Vector DB & Embeddings
    "chromadb>=1.1.0",
    # MCP Server
    "mcp[cli]>=1.2.0",
    # Configuration & Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.2",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    # Document format conversion (MD → Confluence/AsciiDoc/HTML)
    "mistune>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
parsers = [
    "python-docx>=1.0.0",  # DOCX parsing
    "openpyxl>=3.1.0",      # Excel parsing
]

[project.scripts]
aicodegencrew = "aicodegencrew.main:run"
aicodegencrew-mcp = "aicodegencrew.mcp.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aicodegencrew"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "phase0: Phase 0 tests (indexing)",
    "phase1: Phase 1 tests (facts extraction)",
    "phase2: Phase 2 tests (architecture analysis)",
    "phase3: Phase 3 tests (architecture synthesis)",
    "phase4: Phase 4 tests (development planning)",
    "phase5: Phase 5 tests (code generation)",
    "e2e: End-to-end tests (require LLM/ChromaDB)",
    "slow: Slow tests (>10 seconds)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.crewai]
type = "crew"
